specs/blueprints/errors/validation/expected_lists_got_section.eno
# Expecting lists but getting an empty section

-- input
# section
-- input

-- javascript
parse(input).lists('section');
-- javascript

-- php
Enolib\Parser::parse($input)->lists('section');
-- php

-- python
enolib.parse(input).lists('section')
-- python

-- ruby
Enolib.parse(input).lists('section')
-- ruby

## ValidationError

-- text
Only lists with the key 'section' were expected.
-- text

-- snippet
   Line | Content
 >    1 | # section
-- snippet

selection: [0,0] => [0,9]


# Expecting lists but getting a section with a field and a list

-- input
# section

field: value

list:
- item
- item
-- input

-- javascript
parse(input).lists('section');
-- javascript

-- php
Enolib\Parser::parse($input)->lists('section');
-- php

-- python
enolib.parse(input).lists('section')
-- python

-- ruby
Enolib.parse(input).lists('section')
-- ruby

## ValidationError

-- text
Only lists with the key 'section' were expected.
-- text

-- snippet
   Line | Content
 >    1 | # section
 *    2 | 
 *    3 | field: value
 *    4 | 
 *    5 | list:
 *    6 | - item
 *    7 | - item
-- snippet

selection: [0,0] => [6,6]

# Expecting lists but getting a section with subsections

-- input
# section

## subsection

field: value

## subsection

list:
- item
- item
-- input

-- javascript
parse(input).lists('section');
-- javascript

-- php
Enolib\Parser::parse($input)->lists('section');
-- php

-- python
enolib.parse(input).lists('section')
-- python

-- ruby
Enolib.parse(input).lists('section')
-- ruby

## ValidationError

-- text
Only lists with the key 'section' were expected.
-- text

-- snippet
   Line | Content
 >    1 | # section
 *    2 | 
 *    3 | ## subsection
 *    4 | 
 *    5 | field: value
 *    6 | 
 *    7 | ## subsection
 *    8 | 
 *    9 | list:
 *   10 | - item
 *   11 | - item
-- snippet

selection: [0,0] => [10,6]
